# genesis-engine-pi

./: .gitignore  LICENSE  PI_SETUP_GUIDE.md  PORTING_PLAN.md  README.md  pyproject.toml  test_hardware.py  test_no_hardware.py
examples/: emulator_bridge.py  jukebox.py  simple_synth.py
genesis_engine/: __init__.py  board.py  engine.py  pcm_bank.py  vgm_commands.py  vgm_parser.py
genesis_engine/sources/: __init__.py  base.py  file_source.py  vgz_source.py
genesis_engine/synth/: __init__.py  default_patches.py  fm_frequency.py  fm_operator.py  fm_patch.py  psg_envelope.py  psg_frequency.py
scripts/: genesis-bridge.service  install-service.sh
